Aktualisiert (nach Constraints)

--- a/res/layout/activity_onboarding_2.xml
+++ b/res/layout/activity_onboarding_2.xml
@@ -14,18 +14,20 @@
         android:layout_marginTop="25dp"
         android:gravity="center"
         android:text="In Jobs kannst du beliebte Inserate durch ein Herz markieren. Diese werden auf einer separaten Seite angezeigt"
+        android:textSize="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:layout_width="338dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="9dp"
+        android:id="@+id/textView35"
+        android:layout_width="347dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="bei Sterne siehst du, welche Bewertung der Arbeitgeber hat und du siehst die Bewertung von den einzelnen Usern. Du kannst über die Anfrage-Funktion im Chat eine Nachricht an den AG verfassen."
-        android:textSize="13dp"
+        android:text="bei Sterne siehst du, welche Bewertung der AG hat, du siehst die Bewertung von den einzelnen Usern. Kannst über die Anfrage-Fkt. im Chat eine Nachricht an den AG verfassen."
+        android:textSize="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView31"
         tools:ignore="MissingConstraints" />
@@ -34,56 +36,58 @@
         android:id="@+id/textView32"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="109dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="56dp"
         android:gravity="center"
         android:text="3/6"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btn1"
+        app:layout_constraintBottom_toTopOf="@+id/skip_3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView27"
+        app:layout_constraintTop_toBottomOf="@+id/textView35"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <Button
 
-        android:id="@+id/btn1"
+        android:id="@+id/skip_3"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/button_background_color_ob_used"
         android:text="Skip"
         android:textColor="@color/white"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn"
+        app:layout_constraintStart_toEndOf="@+id/back2"
         tools:ignore="MissingConstraints" />
 
     <Button
 
-        android:id="@+id/btn"
+        android:id="@+id/back2"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="93dp"
         android:backgroundTint="@color/button_bg_color_back"
         android:text="Back"
         android:textColor="@color/white"
         android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView32"
         tools:ignore="MissingConstraints" />
 
     <Button
+        android:id="@+id/next3"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/button_background_color_ob_lg_unused"
         android:text="Next"
         android:textColor="@color/black"
@@ -112,8 +116,8 @@
         android:id="@+id/imageView11"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="69dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/ic_baseline_favorite_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
