--- a/res/layout/activity_onboarding_1.xml
+++ b/res/layout/activity_onboarding_1.xml
@@ -10,17 +10,25 @@
         android:id="@+id/textView27"
         android:layout_width="240dp"
         android:layout_height="25dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="25dp"
         android:gravity="center"
         android:text="In Jobs kannst du nach Jobs suchen"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="422dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView34"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView34"
         android:layout_width="240dp"
         android:layout_height="60dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Über die Filter kannst du nach vorhandenen Jobs suchen"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,56 +39,60 @@
         android:id="@+id/textView33"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="109dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="97dp"
         android:layout_marginBottom="77dp"
         android:gravity="center"
         android:text="2/6"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btn1"
+        app:layout_constraintBottom_toTopOf="@+id/skip_3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView27"
+        app:layout_constraintTop_toBottomOf="@+id/textView34"
+        app:layout_constraintVertical_bias="0.561"
         tools:ignore="MissingConstraints" />
 
     <Button
 
-        android:id="@+id/btn1"
+        android:id="@+id/skip_2"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="88dp"
         android:backgroundTint="@color/button_background_color_ob_used"
         android:text="Skip"
         android:textColor="@color/white"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn3"
+        app:layout_constraintStart_toEndOf="@+id/back1"
         tools:ignore="MissingConstraints" />
 
     <Button
 
-        android:id="@+id/btn3"
+        android:id="@+id/back1"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="63dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="86dp"
         android:backgroundTint="@color/button_bg_color_back"
         android:text="Back"
         android:textColor="@color/white"
         android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView33"
+        app:layout_constraintVertical_bias="0.962"
         tools:ignore="MissingConstraints" />
 
     <Button
+        android:id="@+id/next2"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="88dp"
         android:backgroundTint="@color/button_background_color_ob_lg_unused"
         android:text="Next"
         android:textColor="@color/black"
@@ -112,7 +124,7 @@
         android:layout_marginStart="33dp"
         android:layout_marginTop="69dp"
         android:layout_marginEnd="17dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/baseline_search"
         app:layout_constraintBottom_toTopOf="@+id/textView27"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -127,12 +139,13 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="69dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_baseline_filter_alt_24"
         app:layout_constraintBottom_toTopOf="@+id/textView27"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView9"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
