--- a/res/layout/activity_onboarding_4.xml
+++ b/res/layout/activity_onboarding_4.xml
@@ -7,77 +7,82 @@
     tools:context=".Onboarding2">
 
     <TextView
+        android:id="@+id/textView36"
         android:layout_width="275dp"
         android:layout_height="53dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="25dp"
         android:gravity="center"
         android:text="Im Profil kannst du dein Stand anschauen und kannst deine Daten eingeben bzw ändern "
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="397dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView99"
         android:layout_width="240dp"
         android:layout_height="60dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="Bei den Einstellungen kannst du die App individuell gestalten und findest auch Informationen über die App."
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="472dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView36"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView29"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="109dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="97dp"
         android:layout_marginBottom="47dp"
         android:gravity="center"
         android:text="5/6"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btn1"
+        app:layout_constraintBottom_toTopOf="@+id/skip_3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView27"
+        app:layout_constraintTop_toBottomOf="@+id/textView99"
         tools:ignore="MissingConstraints" />
 
     <Button
-
-        android:id="@+id/btn1"
+        android:id="@+id/skip_5"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/button_background_color_ob_used"
         android:text="Skip"
         android:textColor="@color/white"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn4"
+        app:layout_constraintStart_toEndOf="@+id/back4"
         tools:ignore="MissingConstraints" />
 
     <Button
-
-        android:id="@+id/btn4"
+        android:id="@+id/back4"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/button_bg_color_back"
         android:text="Back"
         android:textColor="@color/white"
         android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView29"
         tools:ignore="MissingConstraints" />
 
     <Button
+        android:id="@+id/next5"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="@color/button_background_color_ob_lg_unused"
         android:text="Next"
         android:textColor="@color/black"
@@ -92,8 +97,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="96dp"
         android:layout_marginEnd="120dp"
-        android:text="Nachrichten lesen und Bewertung abgeben"
         android:gravity="center"
+        android:text="Nachrichten lesen und Bewertung abgeben"
         android:textColor="@color/black"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -104,20 +109,25 @@
         app:layout_constraintVertical_bias="0.205" />
 
     <ImageView
+        android:id="@+id/imageView12"
         android:layout_width="150dp"
         android:layout_height="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/ic_baseline_person_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="100dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="48dp"
         android:src="@drawable/baseline_settings_grey"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="200dp"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
