--- a/res/layout/activity_onboarding_end.xml
+++ b/res/layout/activity_onboarding_end.xml
@@ -45,20 +45,20 @@
         android:id="@+id/btn_skip6"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="47dp"
         android:layout_marginEnd="10dp"
         android:backgroundTint="@color/button_background_color_ob_unused"
         android:text="Skip"
         android:textColor="@color/black"
         android:textSize="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
-        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/go_1"
+        app:layout_constraintStart_toEndOf="@+id/back5"
         app:layout_constraintTop_toBottomOf="@+id/textView28"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/back5"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginStart="70dp"
@@ -75,7 +75,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/go_1"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
