--- a/res/layout/person_angaben.xml
+++ b/res/layout/person_angaben.xml
@@ -6,165 +6,230 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageButton
+        android:id="@+id/imageButton8"
         android:layout_width="72dp"
         android:layout_height="69dp"
         android:background="@color/grey"
         android:contentDescription="@string/back_to_the_side"
         android:src="@drawable/ic_baseline_arrow_back_ios_new_24_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView44"
         android:layout_width="326dp"
         android:layout_height="69dp"
-        android:gravity="center"
         android:background="@color/grey"
+        android:gravity="center"
         android:text="Persönliche Angaben"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textDirection="ltr"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="-0dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageButton8"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
 
     <TextView
+        android:id="@+id/textView45"
         android:layout_width="120dp"
         android:layout_height="30dp"
-        tools:ignore="MissingConstraints"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="58dp"
         android:text="Vorname:"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="127dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="120dp"
         android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
         android:text="Nachname:"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="193dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView45"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="120dp"
         android:layout_height="30dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="37dp"
         android:text="E-Mail:"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view7"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="120dp"
         android:layout_height="30dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="41dp"
         android:text="Telefon:"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="421dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view4"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="120dp"
         android:layout_height="30dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="34dp"
         android:text="Adresse:"
         android:textSize="18dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="485dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        tools:ignore="MissingConstraints" />
 
     <View
+        android:id="@+id/view7"
         android:layout_width="350dp"
         android:layout_height="2dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="40dp"
         android:background="@color/grey"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="263dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        tools:ignore="MissingConstraints" />
 
     <View
         android:id="@+id/view4"
         android:layout_width="350dp"
         android:layout_height="2dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="39dp"
         android:background="@color/grey"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="378dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="73dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="710dp" />
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="208dp"
-        android:layout_height="47dp"
+        android:layout_width="162dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="29dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="mustermann@gmail.com"
-        android:textSize="16sp"
 
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="295dp" />
+        android:text="mustermann@gmail.com"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/view7"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextPhone"
-        android:layout_width="211dp"
-        android:layout_height="36dp"
+        android:layout_width="124dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
+        android:inputType="phone"
         android:text="0123456789"
         android:textSize="16sp"
-        android:inputType="phone"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="421dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView14"
+        app:layout_constraintTop_toBottomOf="@+id/view4"
+        tools:ignore="MissingConstraints" />
 
     <TextView
-        android:layout_width="200dp"
-        android:layout_height="30dp"
+        android:id="@+id/textView46"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="93dp"
         android:text="Max"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="127dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView44"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
+        android:layout_width="144dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="89dp"
         android:text="Mustermann"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="193dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView46"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine2"
-        android:layout_width="174dp"
-        android:layout_height="79dp"
+        android:layout_width="159dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="23dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:text="Musterstraße 1 76133 Karlsruhe"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="474dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView15"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
+        tools:ignore="MissingConstraints" />
+
+    <ImageButton
+        android:id="@+id/imageButton6"
+        android:layout_width="32dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="29dp"
+        android:src="@drawable/ic_baseline_edit_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
+        tools:ignore="MissingConstraints" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="32dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="42dp"
+        android:src="@drawable/ic_baseline_edit_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view4"
+        tools:ignore="MissingConstraints" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="32dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="29dp"
+        android:src="@drawable/ic_baseline_edit_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view7"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
