--- a/res/layout/profilanzeige.xml
+++ b/res/layout/profilanzeige.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -11,13 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="73dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="80dp"
         android:scrollbarStyle="outsideInset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="0.0"
         app:menu="@menu/bottom_nav_menu"
         tools:ignore="MissingConstraints" />
 
@@ -28,6 +30,8 @@
         android:background="@color/grey"
         android:contentDescription="@string/back_to_the_side"
         android:src="@drawable/ic_baseline_arrow_back_ios_new_24_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -42,41 +46,32 @@
         android:textDirection="ltr"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="-0dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="150dp"
         android:layout_height="30dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="49dp"
         android:text="Max Mustermann"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView23"
         android:layout_width="120dp"
         android:layout_height="20dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="14dp"
         android:text="25 Jahre"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView21"
         tools:ignore="MissingConstraints" />
@@ -85,15 +80,11 @@
         android:id="@+id/imageView2"
         android:layout_width="118dp"
         android:layout_height="83dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="11dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="28dp"
         android:background="@drawable/shape"
         android:src="@drawable/ic_outline_image_24"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView21"
         app:layout_constraintTop_toBottomOf="@+id/textView20"
         tools:ignore="MissingConstraints" />
 
@@ -101,46 +92,34 @@
         android:id="@+id/imageView5"
         android:layout_width="39dp"
         android:layout_height="39dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="44dp"
         android:src="@drawable/baseline_stars_yellow_24dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
-        app:layout_constraintEnd_toStartOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView23"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView22"
-        android:layout_width="199dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="109dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="130dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="53dp"
         android:gravity="left"
         android:text="5 Bewertungen"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView24"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
+        app:layout_constraintTop_toBottomOf="@+id/textView23"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="39dp"
         android:layout_height="39dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_baseline_verified_user_24"
-        app:layout_constraintBottom_toTopOf="@+id/view5"
-        app:layout_constraintEnd_toStartOf="@+id/textView24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         tools:ignore="MissingConstraints" />
@@ -149,15 +128,11 @@
         android:id="@+id/textView24"
         android:layout_width="199dp"
         android:layout_height="31dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="109dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
         android:text="Identität verifiziert"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/view5"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/textView22"
         tools:ignore="MissingConstraints" />
@@ -173,6 +148,7 @@
         android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/textView25"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24"
         tools:ignore="MissingConstraints" />
@@ -181,99 +157,109 @@
         android:id="@+id/view"
         android:layout_width="320dp"
         android:layout_height="2dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="32dp"
         android:background="@color/grey"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="643dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView25"
-        android:layout_width="85dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="72dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
         android:text="Info"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/view5"
-        app:layout_constraintHorizontal_bias="0.047"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/view5"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="39dp"
         android:layout_height="39dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="15dp"
         android:src="@drawable/ic_baseline_home_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="440dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
+        android:id="@+id/imageView14"
         android:layout_width="39dp"
         android:layout_height="39dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="12dp"
         android:src="@drawable/ic_baseline_card_membership_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="498dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
+        android:id="@+id/imageView15"
         android:layout_width="39dp"
         android:layout_height="39dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="18dp"
         android:src="@drawable/ic_baseline_forum_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="554dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView14"
+        tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView37"
         android:layout_width="199dp"
         android:layout_height="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="97dp"
         android:text="Karlsruhe"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="448dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25"
+        tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView38"
         android:layout_width="199dp"
         android:layout_height="31dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
         android:text="Mitglied seit 2010"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="498dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/textView37"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:layout_width="199dp"
         android:layout_height="31dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="26dp"
         android:text="Deutsch, Englisch"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="554dp" />
+        app:layout_constraintStart_toEndOf="@+id/imageView15"
+        app:layout_constraintTop_toBottomOf="@+id/textView38"
+        tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="8dp"
+    <Button
+        android:id="@+id/button05"
+        android:layout_width="115dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="27dp"
+        android:backgroundTint="@color/white"
         android:text="Bearbeiten"
         android:textColor="@color/blue"
-        android:textSize="20dp"
+        android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         tools:ignore="MissingConstraints" />
 
